--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mgmwebbackend",
+  "homepage": "https://t-emit.github.io/MGMWEBFRONTEND",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
